templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: mg9
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80

        #  rules:
        #  - http:
        #      paths:
        #      - path: /users/*
        #        backend:
        #          serviceName: users-node-svc
        #          servicePort: 80
